import { User } from './user'

export class Comment {
    comment: string;
    physician: User;
}